# lbatch

./: .gitignore  LICENSE  README.md  lbatch_v1_0_implementation_spec.md  pyproject.toml
docs/: developer_notes.md  idempotent_jobs.md  user_guide.md
src/lbatch/: __init__.py  arrays.py  capacity.py  cli.py  config.py  db.py  dependencies.py  errors.py  events.py  locks.py  models.py  parser.py  recovery.py  sbatch_directives.py  scheduler.py  slurm.py  status.py  submission.py  wrapper.py
tests/unit/: test_arrays.py  test_directives.py  test_parser.py  test_queue.py
